--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
              <div class="parallax">
                 <div class="container">
-                    <div class="titleText">ELIZABETH HOM</div>
+                    <div class="bottom-left">ELIZABETH HOM</div>
                 </div>
              </div>
             <header>
