--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
              </div>
             <header>
                 <h1>ELIZABETH HOM</h1>
+                <h2>personal website</h2>
             </header>
 
             <ul>
