--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 </div>
              </div>
             <header>
-                <h1>ELIZABETH HOM</h1>
+                <h1>ELIZABETH HOM LOLOL</h1>
                 <h2>personal website</h2>
             </header>
 
