--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <html>
+        <title>elizabeth hom.</title>
         <head>
             <link rel="stylesheet" href="elizabeth.css">
             <link href='https://fonts.googleapis.com/css?family=Hammersmith One' rel='stylesheet'>
