--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <html>
   <body>
     <p>Hello, mommy poo. I see you! - hup</p>
+    
+    <img src="hup.jpg" alt="hup playing dead">
   </body>
 </html>
