--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <body>
     <p>Hello, mommy poo. I see you! - hup</p>
     
-    <img src="hup.jpg" alt="hup playing dead">
+    <img src="hup.png" alt="hup playing dead">
   </body>
 </html>
